update presentations and life bar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,3 +5,9 @@ main:
 
   - title: "Publications"
     url: "/#-publications"
+
+  - title: "Presentations"
+    url: "/#-presentations"
+
+  - title: "Life"
+    url: "/#-life"
