--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,17 +3,17 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
+  - title: "CV"
+    url: "/#-cv"
+
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Selected projects"
+  - title: "Selected Projects"
     url: "/#-selected-projects"
 
   - title: "Presentations"
     url: "/#-presentations"
-
-  - title: "Curriculum Vitae"
-    url: "/#-curriculum-vitae"
 
   - title: "Life"
     url: "/#-life"
