add cv bar and update about.md

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Selected Projects"
+  - title: "Selected projects"
     url: "/#-selected-projects"
 
   - title: "Presentations"
