add cv bar and update about.md

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Selected projects"
-    url: "/#-selected-projects"
+  - title: "Projects"
+    url: "/#-projects"
 
   - title: "Presentations"
     url: "/#-presentations"
