--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: "/#-publications"
 
   - title: "Selected Projects"
-    url: "/#-selected-projects"
+    url: "/#selected-projects"
 
   - title: "Presentations"
     url: "/#-presentations"
