--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "Curriculum Vitae"
-    url: "/#-curriculum-vitae"
+  # - title: "Curriculum Vitae"
+  #   url: "/#-curriculum-vitae"
 
   - title: "Publications"
     url: "/#-publications"
