update about.md and navigation.yml

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,5 +15,5 @@ main:
   - title: "Presentations"
     url: "/#-presentations"
 
-  - title: "Life"
-    url: "/#-life"
+  # - title: "Life"
+  #   url: "/#-life"
